# Chimera-Agent-Runtime

./: .coderabbit.yaml  .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: architecture_strategy.md  project_chimera_research_report.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  frontend.md  functional.md  mcp_tooling.md  openclaw_integration.md  security.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
