[project]
name = "chimera-agent-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coinbase-agentkit>=0.7.4",
    "jsonschema>=4.26.0",
    "langchain>=1.2.8",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "weaviate-client>=4.19.2",
]
